<resources>
    <string name="app_name">Balance Forecasting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account_fragment">Account</string>
    <string name="settings_fragment">Settings</string>
    <string name="bills_income_fragment">Bills and Income</string>
    <string name="contact_support_fragment">Contact Support</string>
    <string name="forecast_fragment">Forecast</string>
    <string name="about_fragment">About</string>
    <string name="title_activity_login">Sign in</string>

    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <!-- Strings related to login -->
    <string name="saved_prefs_login_email">login_email</string>
    <string name="saved_prefs_login_password">login_password</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="action_success">You are logged in as</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to subscription -->
    <string name="subscribe_title">Subscribe</string>
    <string name="subscribe_description">Receive a monthly or yearly subscription.</string>
    <string name="monthly_subscribe_btn">Monthly</string>
    <string name="yearly_subscribe_btn">Yearly</string>


    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-9067742135448913/5728269188</string>

</resources>
